# covid-vaccine-efficacy

./: Cargo.toml  README.md  fetch-data.sh
data/: ewp_dsh_zgony_po_szczep_20211214.csv  tabela01.xls  vaccines-pl.csv
src/: deaths.rs  demographics.rs  main.rs  plots.rs  tables.rs  vaccination.rs
